--- a/templates/index.html
+++ b/templates/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <title>Decrypt CAP file</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/main.css">
 </head>
 <body>
 <div class="container">
     <div class="row mt-3">
         <div class="col-4 offset-4">
             <h1>Decrypt CAP file</h1>
-            <form action="" method="post" enctype="multipart/form-data">
+            <form class="decrypt_form mt-3" action="" method="post" enctype="multipart/form-data">
                 <input required type="file" accept="application/vnd.tcpdump.pcap" name="cap_file">
-                <button class="btn btn-primary" type="submit">Submit</button>
+                <button class="btn btn-primary mt-3" type="submit">Submit</button>
             </form>
         </div>
     </div>
